fixed MBL-10441 truncation of labels

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -467,7 +467,7 @@
     margin: 0;
     padding: 0 12px;
     position: absolute;
-    right: 8px;
+    right: 5px;
 }
 
 .row-edit[data-field-type="picklist"] > div > input,
@@ -483,19 +483,19 @@
 .row-edit[data-field-type="date"] > input,
 .row-edit[data-field-type="note"] > input
 {
-    padding: 8px 34px 8px 110px !important;
+    padding: 8px 34px 8px 10px !important;
 }
 
 .row-edit[data-field-type="signature"] > div > canvas,
 .row-edit[data-field-type="signature"] > div > img
 {
-    margin-left: 110px;
+    margin-left: 10px;
 }
 
 .row-edit[data-field-type="note"] > div > textarea,
 .row-edit[data-field-type="note"] > textarea
 {
-    padding: 8px 34px 8px 110px !important;
+    padding: 8px 34px 8px 10px !important;
     height: 5em;
     overflow: hidden;
 }
@@ -525,11 +525,11 @@
 .row-edit[data-field-type="address"] > div > div
 {
     min-height: 1.5em !important;
-    padding: 4px 34px 4px 110px !important;
+    padding: 4px 34px 4px 10px !important;
 }
 
 .text-input {
-    padding:  8px 34px 8px 110px !important;
+    padding:  8px 34px 8px 10px !important;
 }
 
 .list-search
@@ -1313,6 +1313,8 @@ img
     width: 100px;
     text-align: right;
     font-size: 0.8em;
+    overflow-wrap: break-word;
+    text-overflow: inherit;
 }
 
 .row
@@ -1334,6 +1336,7 @@ img
     position: relative;
     overflow: hidden;
     text-overflow: ellipsis;
+    vertical-align: top;
 }
 
 .row > * > a
@@ -1370,11 +1373,10 @@ img
 .row-edit > div > label,
 .row-edit > label
 {
-    position: absolute;
+    width: 100%;
+    text-align: left;
     height: 30px;
     line-height: 30px;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
 
 .row > div > input[type|=radio], .row > div > input[type|=checkbox],
@@ -1407,6 +1409,7 @@ img
     height: 32px !important;
     border: 0 none transparent;
     background: transparent;
+    background-color: @gray4-lighter;
 }
 
 .row > div > textarea,
@@ -1424,6 +1427,7 @@ img
     border: 0 none black;
     padding: 8px 10px 8px 110px;
     background: transparent;
+    background-color: @gray4-lighter;
     width: 100%;
     display: block;
 }
